# maid-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  deploy.ps1  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  code-quality.yml  upgrade-dependencies.yml
src/: cat_cog.py  cleaning_cog.py  main.py
src/configs/: logs.py
src/utils/: file.py
tests/: test_cat_cog.py
