[project]
name = "Maid bot"
version = "1.1.2"
description = "A bot for cleaning up discord channels"
authors = [
    {name = "MorganTwoZero", email = "90017582+MorganTwoZero@users.noreply.github.com"},
]
dependencies = [
    "py-cord>=2.1.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.3",
    "pytest-xdist[psutil]>=2.5.0",
    "pytest-asyncio>=0.19.0",
    "pytest-recording>=0.12.1",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "python src/main.py"
dev = "watchfiles --filter python 'python src/main.py' ./src"